# ComfyUI-INT-Crush

./: README.md  __init__.py  _cuda_graph.py  _loaders.py  _lora.py  _ops.py  _quant_utils.py  _triton_runtime.py  comfy_nodes.py  convlinear.py  model_patcher.py  pyproject.toml  quant_layout.py
kernels/: __init__.py  triton_dequant_epilogue.py  triton_fht.py  triton_int4_to_int8_unpack.py  triton_int4_to_int8_unpack_transpose.py  triton_int4_unpack.py  triton_int8_gemm.py  triton_quantize.py  triton_w4a16_gemm.py  triton_w4a8_gemm.py
tests/: __init__.py  _fixtures.py  _intcrush.py  conftest.py  test_convlinear.py  test_quant_utils.py  test_w4a8_gemm.py  test_w8a8_fused_kernels.py
